# chuk-finetune

./: .gitignore  INFERENCE.md  README.md  TEACHER.md  TODO.md  arg_parser.py  demo_run_teacher_collection.py  hello.py  infer.py  infer_student.py  logger_config.py  main.py  model_loader.py  prompt_handler.py  pyproject.toml  reward_functions.py  sft_train_cli.py  stats_collector.py  student_sft_cli.py  student_sft_train_cli.py  teacher_collection_cli.py  train_config.yaml
dataset/teacher/: haikus.jsonl  input.jsonl  limericks.jsonl  math_output.jsonl  output copy.jsonl  output.jsonl
dataset/zero/: boxed_verifier_samples_very_easy.jsonl  morse.jsonl  verifier_2_samples_very_easy.jsonl  verifier_samples_very_easy.jsonl
src/: dataset_loader.py  device_selection.py  model_utils.py  prompt_renderer.py  torch_device_selection.py
src/cli/: inference_cli.py
src/dataset/: dataset_loader.py  prompt_handler.py  prompt_renderer.py  verifiers_dataset_loader.py
src/device/: tensor_debug.py  torch_device_memory.py  torch_device_selection.py
src/inference/: chat_template.py  custom_generate.py  infer.py  mlx_inference.py  prompt_removal.py  sampler.py  stats_collector.py  stop_utils.py  stream_handler.py  text_utils.py  torch_inference.py
src/model/: adapters.py  checkpoints.py  copy_weights.py  model_detection.py  model_loader.py
src/templates/: prompt_template.jinja2
src/train/: custom_generate_mlx.py  dataset_loader.py  generic_train.py  get_dataloader.py  grpo_loss.py  grpo_trainer.py  grpo_utils.py  model_loader.py  optimizer_loader.py  trainer_base.py  (+3 more)
(+98 files in other folders)
